--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 3.28)
-project(PokemonBattleSim_V_0_0_1)
+project(PokemonBattleSim_V0_0_4)
 
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(PokemonBattleSim_V_0_0_1 cpp/main.cpp
+add_executable(PokemonBattleSim_V0_0_4 cpp/main.cpp
         cpp/CVar.cpp
-        cpp/CInt.cpp
-        cpp/CString.cpp
+        cpp/CVar.cpp
         cpp/CString.cpp)
